// Code generated by tools/proto/build.go.
syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option go_package = "./msgid";
package msgid;

// Client向Server发送消息
enum MsgIDS2S
{
	 S2SNone	= 0;
	 S2SGt2AccLogin	= 1;
	 S2SAcc2GtLogin	= 2;
	 S2SGameState	= 7;
	 S2SReqRoleOnline	= 8;
	 S2SResRoleOnline	= 9;
	 S2SReqConfig	= 10;
	 S2SResConfig	= 11;
	 S2SKickAcc	= 12;
	 S2SKickRole	= 13;
	 S2SRelayToRole	= 14;
	 S2SOfflineEvt	= 15;
	 S2SRoleOffline	= 16;
	
};