// Code generated by tools/proto/build.go.
syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option go_package = "./msgid";
package msgid;

// Client向Server发送消息
enum MsgIDC2S
{
	 C2SGateHandle	= 0;
	 C2SInit	= 1;
	 C2SAccountHandle	= 100000;
	 C2SLogin	= 100001;
	 C2SBindAcc	= 100005;
	 C2SGameHandle	= 200000;
	 C2SClientReady	= 200001;
	 C2SHeartBeat	= 200004;
	 C2SWithoutRole	= 200006;
	
};