// Code generated by tools/proto/build.go.
syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option go_package = "./msgid";
package msgid;

// Client向Server发送消息
enum MsgIDS2C
{
	 S2CNone	= 0;
	 S2CInit	= 1;
	 S2CHeartBeat	= 2;
	 S2CGateHandle	= 100;
	 S2CLogin	= 101;
	 S2CKickRole	= 103;
	 S2CDayChange	= 104;
	 S2CDataReset	= 105;
	 S2CEcho	= 106;
	
};